refactor: improve zone patch handling
